# sifter

./: Cargo.toml  README.md  config.yaml
src/: combine.rs  generate.rs  main.rs
