[package]
name = "sifter"
version = "0.1.0"
edition = "2021"

#[[bin]]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
clap = { version = "4.0", features = ["derive"] }
linked-hash-map = "0.5.6"
itertools = "0.10.5"